# solarlog2mqtt

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  install  pyproject.toml  requirements.txt  run  solarlog2mqtt  solarlog2mqtt.conf.example
.forgejo/workflows/: docker-build.yml
.github/workflows/: ci.yml
solarlog2mqtt_core/: config_schema.py  data_processor.py  orchestrator.py  solar_log_client.py
src/solarlog2mqtt/: __init__.py  __main__.py
src/solarlog2mqtt/core/: __init__.py  api_validation.py  config_schema.py  constants.py  data_processor.py  exceptions.py  logging_config.py  mqtt_publisher.py  orchestrator.py  solar_log_client.py
supervisor/: solarlog2mqtt.conf
systemd/: solarlog2mqtt.service
